; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Pcd/extr_fman_kg.c_fman_kg_set_dflt_val.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Pcd/extr_fman_kg.c_fman_kg_set_dflt_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fman_kg_regs = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fman_kg_set_dflt_val(%struct.fman_kg_regs* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.fman_kg_regs*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.fman_kg_regs* %0, %struct.fman_kg_regs** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.fman_kg_regs*, %struct.fman_kg_regs** %4, align 8
  %12 = getelementptr inbounds %struct.fman_kg_regs, %struct.fman_kg_regs* %11, i32 0, i32 1
  %13 = call i32 @iowrite32be(i32 %10, i32* %12)
  br label %19

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.fman_kg_regs*, %struct.fman_kg_regs** %4, align 8
  %17 = getelementptr inbounds %struct.fman_kg_regs, %struct.fman_kg_regs* %16, i32 0, i32 0
  %18 = call i32 @iowrite32be(i32 %15, i32* %17)
  br label %19

19:                                               ; preds = %14, %9
  ret void
}

declare dso_local i32 @iowrite32be(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
